--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -12,7 +12,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Check libs
-        uses: canonical/charming-actions/check-libraries@2.0.0-rc
+        uses: canonical/charming-actions/check-libraries@2.0.0
         with:
           credentials: "${{ secrets.CHARMHUB_TOKEN }}"
           github-token: "${{ secrets.GITHUB_TOKEN }}"
@@ -42,6 +42,10 @@ jobs:
   functional-test:
     name: Functional tests
     runs-on: ubuntu-latest
+    needs:
+      - lint
+      - unit-test
+      - lib-check
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -56,6 +60,10 @@ jobs:
   integration-test:
     name: Integration tests (microk8s)
     runs-on: ubuntu-latest
+    needs:
+      - lint
+      - unit-test
+      - lib-check
     steps:
       - name: Checkout
         uses: actions/checkout@v2
