--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Check libs
-        uses: canonical/charming-actions/check-libraries@2.0.0-rc
+        uses: canonical/charming-actions/check-libraries@2.0.0
         with:
           credentials: "${{ secrets.CHARMHUB_TOKEN }}"
           github-token: "${{ secrets.GITHUB_TOKEN }}"
@@ -45,6 +45,10 @@ jobs:
   functional-test:
     name: Functional tests
     runs-on: ubuntu-latest
+    needs:
+      - lint
+      - unit-test
+      - lib-check
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -59,6 +63,10 @@ jobs:
   integration-test:
     name: Integration tests (microk8s)
     runs-on: ubuntu-latest
+    needs:
+      - lint
+      - unit-test
+      - lib-check
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -84,10 +92,10 @@ jobs:
         with:
           fetch-depth: 0
       - name: Select charmhub channel
-        uses: canonical/charming-actions/channel@2.0.0-rc
+        uses: canonical/charming-actions/channel@2.0.0
         id: channel
       - name: Upload charm to charmhub
-        uses: canonical/charming-actions/upload-charm@2.0.0-rc
+        uses: canonical/charming-actions/upload-charm@2.0.0
         with:
           credentials: "${{ secrets.CHARMHUB_TOKEN }}"
           github-token: "${{ secrets.GITHUB_TOKEN }}"
