--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
 skipsdist=True
 skip_missing_interpreters = True
-envlist = lint, unit
+envlist = fmt, lint, unit
 
 [vars]
 src_path = {toxinidir}/src/
 tst_path = {toxinidir}/tests/
-all_path = {[vars]src_path} {[vars]tst_path} 
+all_path = {[vars]src_path} {[vars]tst_path}  {[vars]lib_path} 
 ftest_path = {toxinidir}/tests/functional
 lxd_name = juju-introspect-func-test
 
