--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist = fmt, lint, unit
 [vars]
 src_path = {toxinidir}/src/
 tst_path = {toxinidir}/tests/
-all_path = {[vars]src_path} {[vars]tst_path}  {[vars]lib_path} 
+all_path = {[vars]src_path} {[vars]tst_path}
 ftest_path = {toxinidir}/tests/functional
 lxd_name = juju-introspect-func-test
 
