--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,15 @@
 [tox]
 skipsdist=True
 skip_missing_interpreters = True
-envlist = fmt, lint, unit
+envlist = lint, unit
 
 [vars]
 src_path = {toxinidir}/src/
 tst_path = {toxinidir}/tests/
-all_path = {[vars]src_path} {[vars]tst_path}
-ftest_path = {toxinidir}/tests/functional
+lib_path = {toxinidir}/lib/charms/parca/
+all_path = {[vars]src_path} {[vars]tst_path}  {[vars]lib_path} 
 lxd_name = juju-introspect-func-test
+ftest_path = {toxinidir}/tests/functional
 
 [testenv]
 setenv =
@@ -23,44 +24,55 @@ passenv =
 [testenv:fmt]
 description = Apply coding style standards to code
 deps =
-    black
-    isort
+    # renovate: datasource=pypi
+    black==22.10.0
+    # renovate: datasource=pypi
+    ruff==0.0.138
 commands =
-    isort {[vars]all_path}
+    ruff --fix {[vars]all_path}
     black {[vars]all_path}
 
 [testenv:lint]
 description = Check code against coding style standards
 deps =
-    black
-    flake8==4.0.1
-    flake8-docstrings
-    flake8-copyright
-    flake8-builtins
-    pyproject-flake8
-    pep8-naming
-    isort
-    codespell
+    # renovate: datasource=pypi
+    black==22.10.0
+    # renovate: datasource=pypi
+    ruff==0.0.138
+    # renovate: datasource=pypi
+    codespell==2.2.2
 commands =
     # uncomment the following line if this charm owns a lib
-    # codespell {[vars]lib_path}
-    codespell {toxinidir}/. --skip {toxinidir}/.git --skip {toxinidir}/.tox \
-      --skip {toxinidir}/build --skip {toxinidir}/lib --skip {toxinidir}/venv \
-      --skip {toxinidir}/.mypy_cache --skip {toxinidir}/icon.svg
-    # pflake8 wrapper supports config from pyproject.toml
-    pflake8 {[vars]all_path}
-    isort --check-only --diff {[vars]all_path}
+    codespell {[vars]lib_path}
+    codespell {toxinidir}/. \
+        --skip {toxinidir}/.git \
+        --skip {toxinidir}/.tox \
+        --skip {toxinidir}/build \
+        --skip {toxinidir}/lib \
+        --skip {toxinidir}/venv \
+        --skip {toxinidir}/.mypy_cache \
+        --skip {toxinidir}/icon.svg
+    
+    ruff {[vars]all_path}
     black --check --diff {[vars]all_path}
 
 [testenv:unit]
 description = Run unit tests
 deps =
-    pytest
-    coverage[toml]
     -r{toxinidir}/requirements.txt
+    # renovate: datasource=pypi
+    pytest==7.2.0
+    # renovate: datasource=pypi
+    coverage[toml]==6.5.0
 commands =
     coverage run --source={[vars]src_path} \
-        -m pytest --ignore={[vars]tst_path}integration --ignore={[vars]tst_path}functional -v --tb native -s {posargs}
+                 -m pytest \
+                 --ignore={[vars]tst_path}integration \
+                 --ignore={[vars]tst_path}functional \
+                 --tb native \
+                 -v \
+                 -s \
+                 {posargs}
     coverage report
 
 [testenv:functional]
@@ -70,12 +82,13 @@ allowlist_externals =
     bash
 commands =
     # Create a LXC container with the relevant packages installed
-    bash -c 'lxc launch -qe ubuntu:focal {[vars]lxd_name} -c=user.user-data="$(<{[vars]ftest_path}/test_setup.yaml)"'
+    bash -c 'lxc launch -qe ubuntu:jammy {[vars]lxd_name} -c=user.user-data="$(<{[vars]ftest_path}/test_setup.yaml)"'
     # Wait for the cloud-init process to finish
     lxc exec {[vars]lxd_name} -- bash -c "cloud-init status -w >/dev/null 2>&1"
     # Copy all the files needed for integration testing
     lxc file push -qp {toxinidir}/tox.ini {[vars]lxd_name}/{[vars]lxd_name}/
     lxc file push -qp {toxinidir}/pyproject.toml {[vars]lxd_name}/{[vars]lxd_name}/
+    lxc file push -qp {toxinidir}/config.yaml {[vars]lxd_name}/{[vars]lxd_name}/
     lxc file push -qpr {toxinidir}/lib {[vars]lxd_name}/{[vars]lxd_name}/
     lxc file push -qpr {toxinidir}/src {[vars]lxd_name}/{[vars]lxd_name}/
     lxc file push -qpr {[vars]tst_path} {[vars]lxd_name}/{[vars]lxd_name}/
@@ -87,25 +100,40 @@ commands_post =
 [testenv:functional-tests]
 description = Run functional tests
 deps =
-    pytest
-    ops
+    # renovate: datasource=pypi
+    ops==1.5.3
+    # renovate: datasource=pypi
+    pytest==7.2.0
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --ignore={[vars]tst_path}integration --log-cli-level=INFO -s {posargs}
+    pytest -v \
+           -s \
+           --tb native \
+           --ignore={[vars]tst_path}unit \
+           --ignore={[vars]tst_path}integration \
+           --log-cli-level=INFO \
+           {posargs}
 
 [testenv:integration]
 description = Run integration tests
 deps =
-    pytest
-    juju
-    pytest-operator
-    tenacity
-    requests
     -r{toxinidir}/requirements.txt
+    # renovate: datasource=pypi
+    juju==3.0.4
+    # renovate: datasource=pypi
+    pytest==7.2.0
+    # renovate: datasource=pypi
+    pytest-operator==0.22.0
+    # renovate: datasource=pypi
+    tenacity==8.1.0
+    # renovate: datasource=pypi
+    requests==2.28.1
 commands =
-    pytest -v --tb native -s \
-        --ignore={[vars]tst_path}unit \
-        --ignore={[vars]tst_path}functional \
-        --log-cli-level=INFO \
-        --model controller \
-        --keep-models \
-        {posargs}
+    pytest -v \
+           -s \
+           --tb native \
+           --ignore={[vars]tst_path}unit \
+           --ignore={[vars]tst_path}functional \
+           --log-cli-level=INFO \
+           --model controller \
+           --keep-models \
+           {posargs}
