ci: configure renovate bot scheudle and groups

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -8,6 +8,9 @@ on:
       - ".github/workflows/renovate.yaml"
       - ".github/workflows/update-libs.yaml"
       - ".gitignore"
+  push:
+    branches:
+      - "renovate/*"
 
 jobs:
   test:
